feature[Panama-generator] 1,支持jdk24 2,优化ErrorNo获取 close #56